--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema de Control de Polladas - Personalizable</title>
+  <title>Sistema de Control de Polladas</title>
   <style>
     * {
       margin: 0;
@@ -442,7 +442,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>📋 Control de Polladas - Sistema Flexible</h1>
+      <h1>📋 Control de Polladas</h1>
     
     </header>
 
@@ -898,4 +898,5 @@
   </script>
 </body>
 </html>
+
 
