--- a/index.html
+++ b/index.html
@@ -529,35 +529,30 @@
 
       <div class="form-group">
         <label>Nombre *</label>
-        <input type="text" id="nombre" placeholder="Ej: JUAN">
+        <input type="text" id="nombre" >
       </div>
 
       <div class="form-group">
         <label>Apellido</label>
-        <input type="text" id="apellido" placeholder="Ej: PÉREZ">
+        <input type="text" id="apellido" >
       </div>
 
       <div class="form-row">
         <div class="form-group">
           <label>DNI</label>
-          <input type="text" id="dni" placeholder="Ej: 12345678">
+          <input type="text" id="dni">
         </div>
         <div class="form-group">
           <label>Teléfono</label>
-          <input type="text" id="telefono" placeholder="Ej: 987654321">
+          <input type="text" id="telefono" >
         </div>
       </div>
 
       <div class="form-group">
         <label>Rango de Números * (Ej: 1-10, 30-40)</label>
-        <input type="text" id="rango" placeholder="1-10">
+        <input type="text" id="rango" >
       </div>
 
-      <div class="form-group">
-        <label>Números Vendidos (escribe los números separados por comas)</label>
-        <input type="text" id="numerosVendidos" placeholder="Ej: 1, 3, 5 (dejar en blanco si no hay)">
-        <small style="color: #666;">Escribe solo los números que ya fueron pagados</small>
-      </div>
 
       <div class="modal-buttons">
         <button class="btn btn-danger" onclick="cerrarModal()">Cancelar</button>
@@ -898,5 +893,6 @@
   </script>
 </body>
 </html>
+
 
 
