--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema de Control de Polladas</title>
+  <title>Sistema de Control</title>
   <style>
     * {
       margin: 0;
@@ -509,14 +509,14 @@
 <body>
   <div class="container">
     <header>
-      <h1>📋 Control de Polladas</h1>
-      <p>Sistema Completo de Gestión</p>
+      <h1> Control de Polladas</h1>
+      
     </header>
 
     <div class="main-content">
    
       <div class="sidebar">
-        <h3>📊 Resumen</h3>
+        <h3> Resumen</h3>
         
         <div class="stat-card">
           <label>Total Personas</label>
@@ -1053,6 +1053,7 @@
   </script>
 </body>
 </html>
+
 
 
 
